fix wrapping for really long tags

--- a/src/less/root.less
+++ b/src/less/root.less
@@ -252,6 +252,7 @@ body {
     .tag {
       display: inline-block;
       padding: 5px;
+      word-break: break-all;
     }
 
     .removeTag {
